README file and style file

--- a/style/style.css
+++ b/style/style.css
@@ -59,6 +59,10 @@ input, select {
   border: 1px solid #ccc;
 }
 
+input::placeholder {
+  color: var(--text);
+}
+
 button {
   background-color: var(--primary);
   color: white;
