--- a/style/style.css
+++ b/style/style.css
@@ -236,3 +236,13 @@ button:hover {
   }
 }
 
+canvas {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  pointer-events: none;
+  width: 200px;
+  height: auto;
+  z-index: 12;
+}
+
